dist/LineScript-win64-20260616/tests/cases/compile_fail/owned_assign.lsc
main() -> i64 do
  declare owned arr = array_new()
  arr = array_new()
  return 0
end
